--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ borsh = "0.10.4"
 curve25519-dalek = "4.1.3"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
+reqwest = "0.12.12"
 serde = "1.0.217"
 serde_json = "1.0.137"
 serde_with = "3.12.0"
